# BasicOpenGLRenderer

./: CMakeLists.txt  README.md
include/assimp/: Importer.hpp  revision.h
include/glad/: glad.h
src/: main.cpp
src/include/: camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shaderprogram.cpp  shaderprogram.hpp  texture.cpp  texture.hpp  utils.h
src/include/objs/: IndexBuffer.cpp  IndexBuffer.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/shaders/: fragment.glsl  fragmentlight.glsl  vertex.glsl  vertexlight.glsl
